Corrigido o id contato. Adicionado o detalhe entre Formação e Contato. Adicionado Favicon.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Product Owner e Desenvolvedor Localizado em Bauru-SP">
     <link rel="stylesheet" href="./css/style.min.css">
+    <link rel="icon" href="arquivos/gN.svg" type="image/svg+xml">
     <title>Guilherme Nogueira</title>
 </head>
 <body>
@@ -178,7 +179,7 @@
 
     </section>
 
-    <footer class="footer" id="contrato">
+    <footer class="footer" id="contato">
 
         <div class="footer-container">
             <p class="footer-txt">Estou disponível para novas oportunidades no momento. Entre em contato comigo e marcamos uma conversa 👋</p>
