--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <meta name="description" content="Product Owner e Desenvolvedor Localizado em Bauru-SP">
     <link rel="stylesheet" href="./css/style.min.css">
     <link rel="icon" href="arquivos/gN.svg" type="image/svg+xml">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Guilherme Nogueira</title>
+    
 </head>
 <body>
     <header class = "header">
