--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Product Owner e Desenvolvedor Localizado em Bauru-SP">
     <link rel="stylesheet" href="./css/style.min.css">
-    <link rel="icon" href="arquivos/gN.svg" type="image/svg+xml">
+    <link rel="icon" href="arquivos/detalhe-principal-favicon.svg" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;700&display=swap" rel="stylesheet">
