Alteração Foto e Detalhes Menu

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Product Owner e Desenvolvedor Localizado em Bauru-SP">
-    <link rel="stylesheet" href="./css/style.min.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="arquivos/detalhe-principal-favicon.svg" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +34,7 @@
 
     <main class="introducao">
 
-        <img src="arquivos/Foto-Perfil_squoosh.png" alt="Foto Perfil">
+        <img src="arquivos/roxo-folha-shadow.png" alt="Foto Perfil">
 
         <div>
 
