--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         <ul>
                             <li>Fundamentos C#<span>40h</span></li>
                             <li>VB.Net<span>30h</span></li>
-                            <li>Master PowerBi<span>21h</span></li>
+                            <li>Desenvolvimento Front End e UX/UI Designer<span>Em andamento</span></li>
                         </ul>
                     
                     </div>
