Ajuste Textos e Link WhatsApp

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <div>
 
-                <p class="formacao-texto">Cursando <strong>Engenharia de Software</strong>, além aprofundamento na área de <strong>programação</strong> atráves de cursos e projetos pessoais com foco em formação <strong>Full Stack</strong> e <strong>UI/UX Design</strong>.</p>
+                <p class="formacao-texto">Cursando <strong>Engenharia de Software</strong>, além de aprofundamento na área de <strong>programação</strong> atráves de cursos e projetos pessoais com foco em formação <strong>Full Stack</strong> e <strong>UI/UX Design</strong>.</p>
 
                 <ul class="formacao-lista">
                     <li class="faculdade">
@@ -190,7 +190,7 @@
 
             <ul class="footer-contato">
                 <li class="footer-email">gnm.silva@icloud.com</li>
-                <li class="footer-tel">+55 14 98190-7181</li>
+                <li class="footer-tel"><a href="https://wa.me/5514981907181" target="_blank">+55 14 98190-7181</a></li>
                 <li class="footer-linkedin"><a href="https://www.linkedin.com/in/gnmsilva/" target="_blank">gnmsilva</a></li>
             </ul>
             
