Atualização pós cargo dev backend

--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
 
         <div>
 
-            <h1>Product Owner<br> 
-                &<br>
-                Desenvolvedor</h1>
+            <h1>Desenvolvedor<br>                
+                Back-end</h1>
 
             <p>&#x1F4CD; Bauru - SP</p>
 
@@ -54,17 +53,36 @@
 
         <div>
             
-            <p class="experiencia-texto">Experiência com <strong>automações</strong> de processos, análise e manipulação de dados em <strong>Python</strong>, <strong>R</strong> e <strong>SQL</strong>. Aplicação de métodos ágeis para <strong>gerenciamento de projetos</strong> em <strong>VB 6</strong>, <strong>C#</strong> e <strong>PostgreSQL</strong></p>
+            <p class="experiencia-texto">Experiência com implementação de <strong>novas funcionalidades</strong>, correção de bugs, manutenções em backend <strong>APIs</strong> e <strong>microservices</strong>. Desenvolvimento nas linguagens <strong>VB6</strong>, <strong>C#</strong> e <strong>PostgreSQL</strong>. Além de experiência em <strong>Python</strong> e <strong>R</strong> para análise de dados e automações de processos.</p>
 
             <div class="empresa">
 
-                <span class="empresa-ano">2021</span>
+                <span class="empresa-ano">2023</span>
+
+                <h3 class="empresa-titulo">Desenvolvedor Back-end</h3>
+
+                <span class="empresa-titulo">Paschoalotto</span>
+
+                <p class="empresa-texto">Implementação de novas funcionalidades, correções de bugs, desenvolvimento em VB6, C#, banco de dados PostgreSQL, criação de testes e trabalhando em equipes ágeis.</p>
+
+                <ul class="empresa-habilidades">
+                    <li>C#</li>
+                    <li>VB6</li>
+                    <li>PostgreSQL</li>
+                    <li>Scrum</li>
+                </ul>
+
+            </div>
+            
+            <div class="empresa">
+
+                <span class="empresa-ano">2021-23</span>
 
                 <h3 class="empresa-titulo">Product Owner</h3>
 
                 <span class="empresa-titulo">Paschoalotto</span>
 
-                <p class="empresa-texto">Sustentação de CRM próprio construído em VB 6, C# e SQL, desenvolvimento de novas funcionalidades conforme necessidade dos stakeholders</p>
+                <p class="empresa-texto">Gestão de projetos, com foco em desenvolvimento de novas funcionalidades conforme necessidade dos stakeholders.</p>
 
                 <ul class="empresa-habilidades">
                     <li>SQL</li>
@@ -95,25 +113,6 @@
 
             </div>
 
-            <div class="empresa">
-
-                <span class="empresa-ano">2017-18</span>
-
-                <h3 class="empresa-titulo">Analista de Planejamento Júnior</h3>
-
-                <span class="empresa-titulo">Paschoalotto</span>
-
-                <p class="empresa-texto">Apoiar a operação com estratégias, monitoramento e controle de indicadores visando concretizar as ações estipuladas</p>
-
-                <ul class="empresa-habilidades">
-                    <li>Python</li>
-                    <li>SQL</li>
-                    <li>R</li>
-                    <li>Análise de Dados</li>
-                </ul>
-
-            </div>
-
         </div>
 
     </section>
@@ -126,7 +125,7 @@
 
             <div>
 
-                <p class="formacao-texto">Cursando <strong>Engenharia de Software</strong>, além de aprofundamento na área de <strong>programação</strong> atráves de cursos e projetos pessoais com foco em formação <strong>Full Stack</strong> e <strong>UI/UX Design</strong>.</p>
+                <p class="formacao-texto">Cursando <strong>Engenharia de Software</strong>, além de diversos cursos extracurriculares na área de <strong>programação</strong> com foco em formação <strong>Back-end</strong>. Expandindo conhecimento para formação <strong>Full Stack</strong> e <strong>UI/UX Design</strong>.</p>
 
                 <ul class="formacao-lista">
                     <li class="faculdade">
@@ -186,7 +185,7 @@
     <footer class="footer" id="contato">
 
         <div class="footer-container">
-            <p class="footer-txt">Estou disponível para novas oportunidades no momento. Entre em contato comigo e marcamos uma conversa 👋</p>
+            <p class="footer-txt">Que tal me conhecer um pouco melhor? Entre em contato comigo e marcamos uma conversa! 👋</p>
 
             <ul class="footer-contato">
                 <li class="footer-email">gnm.silva@icloud.com</li>
